design header and banner section

--- a/home.html
+++ b/home.html
@@ -12,10 +12,11 @@
   <header>
     <nav class="navbar">
         <span class="site-name">alternatives.net</span>
-        <div class="rechercher">
-            <input type="search" id="site-search" name="rechercher">
-            <button>rechercher</button>
+        <div class="search-form">
+            <input type="search" id="site-search" class="search-input" name="rechercher" placeholder="Trouver une alternative">
+            <button class="search-btn">rechercher</button>
         </div>
+    </nav>
   </header>
   <div class="bg-container">
       <div class="section-header">
