--- a/home.html
+++ b/home.html
@@ -110,5 +110,345 @@
         </div>
     </div>
   </section>
+
+  <section class="alternatives-demandes">
+    <div id="alternatives_demandes">
+        <div class="alternatives-section">
+          <div class="alternatives-column">
+            <div class="alternatives-title">Alternatives les plus démandés</div>
+            <div class="alternatives-texte">Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br>
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+                Ut enim ad minim veniam.<br>
+            </div>
+          </div>
+          <div class="alternatives-btn">
+              <button class="voir-plus" type="button">Voir Plus</button>
+          </div>
+        </div>
+        <div class="alternatives-card-row">
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>  
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>  
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+              
+        </div>
+    </div>
+  </section>
+
+  <section class="nouvelles-alternatives">
+    <div id="alternatives">
+        <div class="alternatives-section">
+          <div class="alternatives-column">
+            <div class="alternatives-title">Nouvelles alternatives</div>
+            <div class="alternatives-texte">Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br>
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+                Ut enim ad minim veniam.<br>
+            </div>
+          </div>
+          <div class="alternatives-btn">
+              <button class="voir-plus" type="button">Voir Plus</button>
+          </div>
+        </div>
+        <div class="alternatives-card-row">
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>  
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>  
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+          <div class="card first-colmun-box-1">
+            <div class="icon-vert">
+                <span><i class="fa-solid fa-pen"></i></span>
+            </div>
+            <div class="first-column-title-1">
+                <span class="title_alternatives">
+                Adobe Photoshop
+                </span>
+                <div class="first-column-subtitle-1">Payant | 84 Alternatives | 3075 Avis</div>
+            </div>
+          </div>
+              
+        </div>
+    </div>
+  </section>
+
+  <section id="footer">
+    <div id="footer-section">
+        <div class="alternatives_footer">
+          <span class="site-name">Alternatives.net</span>
+          <div class="description_footer">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br>
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+                    Ut enim ad minim veniam.<br>
+            </div>
+            <div class="alternatives-btn">
+              <button class="voir-plus" type="button">Voir Plus</button>
+            </div>
+        </div>
+        <div class="footer_menu">
+          <span class="title_menu_footer">A propos</span>
+          <ul>
+            <li>Contact</li>
+            <li>Mentions légales</li>
+            <li>Politique de confidentialité</li>
+          </ul>
+        </div>
+        <div class="footer_menu">
+          <span class="title_menu_footer">A propos</span>
+          <ul>
+            <li>Contact</li>
+            <li>Mentions légales</li>
+            <li>Politique de confidentialité</li>
+          </ul>
+        </div>
+    </div>
+  </section>
+  <section id="copyright">
+    <span class="copyright">copyright 2020</span>
+  </section>
+
 </body>
 </html>
